argo/downloads/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: downloads
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: ghcr.io/hotio/radarr:latest
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: config
          mountPath: "/config"
        - name: media
          mountPath: "/media"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: media
        persistentVolumeClaim:
          claimName: downloads-media
