argo/downloads/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: downloads
spec:
  ports:
  - name: radarr
    port: 7878
    protocol: TCP
  selector:
    app: radarr
  type: ClusterIP
